[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
edition = "2018"
name = "f24-telemetry-agent"
version = "0.1.0"

[dependencies]
chan = "0.1.23"
env_logger = "0.5.13"
failure = "0.1.2"
futures = "0.1.24"
hyper = "0.12.10"
hyper-tls = "0.3.0"
log = "0.4.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
tokio-core = "0.1.17"
toml = "0.4.7"
unbounded-gpsd = "0.4.3"
